// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-member-group should delete a member group 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`delete-member-group should handle non-existent member group 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
